--- a/package.json
+++ b/package.json
@@ -3,16 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/vision": "^2.1.1",
+    "@material-ui/core": "^4.11.0",
+    "@reach/combobox": "^0.11.0",
+    "@react-google-maps/api": "^1.9.12",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
+    "dotenv": "^8.2.0",
+    "google-auth-library": "^6.0.6",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
+    "react-cool-onclickoutside": "^1.5.5",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-dropzone": "^11.0.3",
+    "react-scripts": "3.4.3",
+    "use-places-autocomplete": "^1.3.10"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": " react-scripts start",
+    "build": " react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
