--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@google-cloud/vision": "^2.1.1",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@reach/combobox": "^0.11.0",
     "@react-google-maps/api": "^1.9.12",
     "@testing-library/jest-dom": "^4.2.4",
